manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devsu-app
  name: devsu-app
  labels:
    app: devsu-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-app
  template:
    metadata:
      labels:
        app: devsu-app
    spec:
      containers:
      - name: devsu-app
        image: devsujperalta.azurecr.io/peraltadevsu:18
        ports:
        - containerPort: 8000'
