manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devsu-app
  name: devsu-app
spec:
  selector:
    app: devsu-app
  ports:
    - name: app-port
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
