manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-app
  namespace: devsu-app
  annotations:
spec:
  rules:
  - host: "devsu-app.ingenial-solutions.com"
    http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: devsu-app
            port:
              number: 80
